tests/baselines/reference/aliasBug.errors.txt
tests/cases/compiler/aliasBug.ts(16,15): error TS2694: Namespace 'foo.bar.baz' has no exported member 'bar'.


==== tests/cases/compiler/aliasBug.ts (1 errors) ====
    module foo {    
        export class Provide {
        }
    
        export module bar { export module baz {export class boo {}}}
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    
    var p = new provide.Provide();
    
    function use() {
      var p1: provide.Provide; // error here, but should be okay
      var p2: foo.Provide;
      var p3:booz.bar;
                  ~~~
!!! error TS2694: Namespace 'foo.bar.baz' has no exported member 'bar'.
      var p22 = new provide.Provide();
    }
    